squid-dev/2024-May.txt
From lanselof at gmail.com  Sat May 25 22:27:35 2024
From: lanselof at gmail.com (Larry Anselof)
Date: Sun, 26 May 2024 00:27:35 +0200
Subject: [squid-dev] Can't build squid on Windows
Message-ID: <CAPq0yh9Ep2soyScDyO7a3BjTVB9+Ng3-3eLrYrratQwjuSB+HQ@mail.gmail.com>

Hi there,

I got the source and am trying to build it.

This is the version I have: "squid-6.9-20240523-rfb0d1814dd.tar.gz".

I set up Cygwin environment on Windows and followed the instructions.
Midway through the `make` command, I get errors, starting with the ones
mentioned below:









*ext_lm_group_acl.cc:109:1: error: no previous declaration for ?char*
AllocStrFromLSAStr(LSA_UNICODE_STRING)? [-Werror=missing-declarations]  109
| AllocStrFromLSAStr(LSA_UNICODE_STRING LsaStr)      |
^~~~~~~~~~~~~~~~~~ext_lm_group_acl.cc:131:1: error: no previous declaration
for ?char* GetDomainName()? [-Werror=missing-declarations]  131 |
GetDomainName(void)      | ^~~~~~~~~~~~~In file included from
../../../../compat/compat.h:104,                 from
../../../../include/squid.h:32,                 from
ext_lm_group_acl.cc:78:*

The build process terminates.

Screenshot is attached below:
[image: image.png]


Will you be fixing this error, so that the Windows build can work?

Thanks &
Best Regards,
Larry
-------------- next part --------------
An HTML attachment was scrubbed...
URL: <http://lists.squid-cache.org/pipermail/squid-dev/attachments/20240526/fa550848/attachment-0001.htm>
-------------- next part --------------
A non-text attachment was scrubbed...
Name: image.png
Type: image/png
Size: 122403 bytes
Desc: not available
URL: <http://lists.squid-cache.org/pipermail/squid-dev/attachments/20240526/fa550848/attachment-0001.png>

From rousskov at measurement-factory.com  Mon May 27 14:38:44 2024
From: rousskov at measurement-factory.com (Alex Rousskov)
Date: Mon, 27 May 2024 10:38:44 -0400
Subject: [squid-dev] Can't build squid on Windows
In-Reply-To: <CAPq0yh9Ep2soyScDyO7a3BjTVB9+Ng3-3eLrYrratQwjuSB+HQ@mail.gmail.com>
References: <CAPq0yh9Ep2soyScDyO7a3BjTVB9+Ng3-3eLrYrratQwjuSB+HQ@mail.gmail.com>
Message-ID: <a496e118-d337-4b67-b1e9-9ddf46b818f2@measurement-factory.com>

On 2024-05-25 18:27, Larry Anselof wrote:
> Hi there,
> 
> I got the source and am trying to build it.
> 
> This is the version I have: "squid-6.9-20240523-rfb0d1814dd.tar.gz".
> 
> I set up Cygwin environment on Windows and followed the instructions. 
> Midway through the `make` command, I get errors, starting with the ones 
> mentioned below:
> 
> /ext_lm_group_acl.cc:109:1: error: no previous declaration for ?char* 
> AllocStrFromLSAStr(LSA_UNICODE_STRING)? [-Werror=missing-declarations]
>  ? 109 | AllocStrFromLSAStr(LSA_UNICODE_STRING LsaStr)
>  ? ? ? | ^~~~~~~~~~~~~~~~~~
> ext_lm_group_acl.cc:131:1: error: no previous declaration for ?char* 
> GetDomainName()? [-Werror=missing-declarations]
>  ? 131 | GetDomainName(void)
>  ? ? ? | ^~~~~~~~~~~~~
> In file included from ../../../../compat/compat.h:104,
>  ? ? ? ? ? ? ? ? ?from ../../../../include/squid.h:32,
>  ? ? ? ? ? ? ? ? ?from ext_lm_group_acl.cc:78:/
> 
> The build process terminates.
> 
> Screenshot is attached below:
> image.png
> 
> 
> Will you be fixing this error, so that the?Windows build can work?

This problem is being tracked as Bug 5377. Thank you for filing that bug 
report. I cannot volunteer to work on this bug right now, but I suggest 
to use that bug report for any followup by others:
https://bugs.squid-cache.org/show_bug.cgi?id=5377

Alex.


